refactor(input): optimize stream